[gd_scene load_steps=4 format=3 uid="uid://s54a52tiwr6c"]

[ext_resource type="Script" path="res://Scripts/wizard_cat.gd" id="1_cwdg5"]
[ext_resource type="Texture2D" uid="uid://rlcuytlrd012" path="res://Assets/Arts/SPRITE_SHEET.png" id="1_ri88o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mdbrr"]
size = Vector2(232, 360)

[node name="wizard_cat" type="Area2D"]
script = ExtResource("1_cwdg5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ri88o")
region_enabled = true
region_rect = Rect2(720, 0, 360, 360)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 4)
shape = SubResource("RectangleShape2D_mdbrr")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
